--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,8 +72,8 @@
     </section>
 
     <section id='socials'>
-      <wa-tooltip for='twitter'>X (Formely Twitter)</wa-tooltip>
-      <a href='https://x.com/sleepy_zuzki' id="twitter" aria-label='X (Formely Twitter)' class='social social__twitter'
+      <wa-tooltip for='twitter'>X (Formerly Twitter)</wa-tooltip>
+      <a href='https://x.com/sleepy_zuzki' id="twitter" aria-label='X (Formerly Twitter)' class='social social__twitter'
          target='_blank'>
         <wa-icon family='brands' name='x-twitter' class="text-2xl align-middle"></wa-icon>
       </a>
