Finished migration to angular app

--- a/src/app/pages/overlays/overlay/kirarye/kirarye.component.css
+++ b/src/app/pages/overlays/overlay/kirarye/kirarye.component.css
@@ -1,5 +1,5 @@
 #overlay {
-  background-image: url('https://assets.zuzki.dev/grid.svg');
+  background-image: url('https://assets.zuzki.dev/grid_371dfd009f.svg');
   border: 1px solid black;
 
   height: 100%;
