--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,6 +1,6 @@
 <wa-avatar
   class='avatar'
-  image='https://assets.zuzki.dev/zuzki_christmas.webp'
+  image='https://assets.zuzki.dev/small_zuzki_christmas_optimized_f2cbf3f61b.webp'
   label='Zuzki'>
 </wa-avatar>
 
