--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -1,2 +1,7 @@
-
-<app-project/>
+@for (project of projects(); track project.id) {
+  <app-project [project]="project"/>
+} @empty {
+  <app-skeleton/>
+  <app-skeleton/>
+  <app-skeleton/>
+}
