Updated static images url

--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,6 +1,6 @@
 <wa-avatar
   class='avatar'
-  image='https://assets.zuzki.dev/small_zuzki_christmas_optimized_f2cbf3f61b.webp'
+  image='https://sleepy-strapi-prod-virginia.s3.us-east-1.amazonaws.com/small_zuzki_christmas_optimized_2123ccfe72.webp'
   label='Zuzki'>
 </wa-avatar>
 
