--- a/src/app/shared/components/projects/project/project.component.html
+++ b/src/app/shared/components/projects/project/project.component.html
@@ -1,24 +1,28 @@
 <wa-card with-image with-footer class="card-overview">
   <img slot='image'
-       [src]="project().screenshot?.formats?.thumbnail?.url || ''"
-       alt='some project'
-       width="{{project().screenshot?.width}}"
-       height="{{ project().screenshot?.height }}"/>
-  <p>{{ project().label }}</p>
+       [src]="project()?.attributes?.screenshot?.data?.attributes?.formats?.thumbnail?.url || ''"
+       [alt]="project()?.attributes?.label || 'Project image'"
+       [width]="project()?.attributes?.screenshot?.data?.attributes?.formats?.thumbnail?.width"
+       [height]="project()?.attributes?.screenshot?.data?.attributes?.formats?.thumbnail?.height"/>
+  <p>{{ project()?.attributes?.label }}</p>
 
   <div class="icons">
-    @for (tech of project().techs; track tech.id) {
-      <wa-tooltip for="{{tech.icon_name}}">{{ tech.label }}</wa-tooltip>
-      <wa-icon id="{{tech.id}}" family="{{tech.family}}" name="{{tech.icon_name}}" class="text-2xl align-middle" style="{{'color: ' + tech.color}}"></wa-icon>
+    @for (tech of project()?.attributes?.techs?.data; track tech.id) {
+      <wa-tooltip [for]="tech.attributes.icon_name">{{ tech.attributes.label }}</wa-tooltip>
+      <wa-icon [id]="tech.id" 
+               [family]="tech.attributes.family" 
+               [name]="tech.attributes.icon_name" 
+               class="text-2xl align-middle" 
+               [style]="'color: ' + tech.attributes.color"></wa-icon>
     }
   </div>
 
   <div slot='footer'>
-    <wa-button href="{{ project().url }}" target='_blank'>
+    <wa-button [href]="project()?.attributes?.url" target='_blank'>
       <wa-icon slot='prefix' name='arrow-up-right-from-square' variant='duotone'></wa-icon>
       Ir
     </wa-button>
-    <wa-button href="{{ project().repository }}" target='_blank'>
+    <wa-button [href]="project()?.attributes?.repository" target='_blank'>
       <wa-icon slot='prefix' name='github' family='brands'></wa-icon>
       Repo
     </wa-button>
