Refactor overlay services and update layouts logic
Replaced ApiService with a new OverlayService to better manage overlay state and layouts. Improved layout handling by introducing signals for state management and updating view components for better modularity. Simplified HTML structure and enhanced accessibility with additional aria attributes.

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -14,7 +14,7 @@
   </section>
 </section>
 
-<main class="wa-body-l text-center">
+<section class="wa-body-l text-center">
   <app-projects id='projects' class='projects_container'/>
   <app-socials id="socials"/>
-</main>
+</section>
