--- a/src/app/pages/overlays/overlays.component.html
+++ b/src/app/pages/overlays/overlays.component.html
@@ -1,4 +1,4 @@
-<main class="w-full flex justify-evenly flex-wrap max-w-[1000px] px-1.5 m-auto">
+<section class="w-full flex justify-evenly flex-wrap max-w-[1000px] px-1.5 m-auto">
   @if (loading()) {
     <!-- Mostramos skeletons durante la carga -->
     @for (skeleton of [1,2,3,4,5,6,7,8,9,10]; track skeleton) {
@@ -25,4 +25,4 @@
       <p>No hay overlays disponibles actualmente.</p>
     </div>
   }
-</main>
+</section>
