--- a/src/app/pages/overlays/overlay/view/view.component.html
+++ b/src/app/pages/overlays/overlay/view/view.component.html
@@ -1,3 +1,3 @@
-<main class="p-0 w-full h-full">
+<section class="p-0 w-full h-full">
   <iframe #streamerView class="w-full h-full"></iframe>
-</main>
+</section>
