--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,1 +1,44 @@
-<app-controls-grid></app-controls-grid>
+<section class="flex flex-col gap-10" id="landing">
+  <section class="flex gap-10" id="introduction">
+    <img alt="Profile Picture" src="https://placehold.co/460x280"/>
+
+    <div class="flex flex-row flex-wrap gap-5">
+      <div class="w-full text-5xl">
+        <h1>Crafting Digital Experiences</h1>
+      </div>
+      <div class="w-full">
+        <p>Hi, I'm Emery, a web developer passionate about creating</p>
+        <p>impactful digital solutions. Explore my work and let's build</p>
+        <p>something amazing together.</p>
+      </div>
+      <div class="w-full self-end">
+        <app-button ariaLabel="Explore My Projects">
+          Explore My Projects
+        </app-button>
+      </div>
+    </div>
+  </section>
+
+  <section id="about_me">
+    <h2 class="text-[1.75rem]">About Me</h2>
+    <p>I'm Emery Bennett, a dedicated web developer with a focus on creating dynamic and user-friendly web applications. My experience</p>
+    <p>spans a variety of technologies, allowing me to approach projects with flexibility and innovation. I'm always looking for new</p>
+    <p>challenges and opportunities to expand my skills, working closely with clients to bring their visions to life.</p>
+  </section>
+
+  <section id="tecnologies">
+    <h2 class="text-[1.75rem]">Tecnologies</h2>
+
+    <div class="tags">
+
+    </div>
+  </section>
+
+  <section id="projects">
+    <h2 class="text-[1.75rem]">Projects</h2>
+  </section>
+
+  <section id="contact">
+    <h2 class="text-[1.75rem]">Contact</h2>
+  </section>
+</section>
