--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@
 * {
   scroll-behavior: smooth;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  font-size: 16px;
 }
 
 html,
