--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,44 +1,57 @@
 <section class="flex flex-col gap-10" id="landing">
   <section class="flex gap-10" id="introduction">
-    <img alt="Profile Picture" src="https://placehold.co/460x280"/>
+    <img alt="Profile Picture" height="280" ngSrc="/images/working.webp" style="width: 460px; height: 280px;" width="460"/>
 
     <div class="flex flex-row flex-wrap gap-5">
       <div class="w-full text-5xl">
-        <h1>Crafting Digital Experiences</h1>
+        <h1>De mis Delirios a la Vida</h1>
       </div>
       <div class="w-full">
-        <p>Hi, I'm Emery, a web developer passionate about creating</p>
-        <p>impactful digital solutions. Explore my work and let's build</p>
-        <p>something amazing together.</p>
+        <p>Hola, soy Zuzki, un Ingeniero de Software apasionado por crear soluciones creativas.</p>
+        <p>Al explorar mi trabajo podrás ver de lo que soy capaz.</p>
+        <p>¡Espero te guste y podamos realizar algo juntos pronto!</p>
       </div>
       <div class="w-full self-end">
         <app-button ariaLabel="Explore My Projects">
-          Explore My Projects
+          Explorar mis proyectos
         </app-button>
       </div>
     </div>
   </section>
 
   <section id="about_me">
-    <h2 class="text-[1.75rem]">About Me</h2>
-    <p>I'm Emery Bennett, a dedicated web developer with a focus on creating dynamic and user-friendly web applications. My experience</p>
-    <p>spans a variety of technologies, allowing me to approach projects with flexibility and innovation. I'm always looking for new</p>
-    <p>challenges and opportunities to expand my skills, working closely with clients to bring their visions to life.</p>
+    <h2 class="text-[1.75rem]">Sobre mí</h2>
+    <p>Soy Zuzki, Ingeniero de Software con pasión por crear experiencias accesibles y visualmente atractivas.</p>
+    <p>Además, cuento con una sólida base en arquitecturas escalables, lo que me permite abordar cada proyecto con precisión y creatividad.</p>
+    <p>Siempre estoy explorando nuevas tecnologías para perfeccionar mi trabajo y ofrecer soluciones funcionales y memorables.</p>
   </section>
 
   <section id="tecnologies">
     <h2 class="text-[1.75rem]">Tecnologies</h2>
 
-    <div class="tags">
-
-    </div>
+    <app-badge [badges]="technologies"></app-badge>
   </section>
 
-  <section id="projects">
+  <section class="flex flex-col gap-10" id="projects">
     <h2 class="text-[1.75rem]">Projects</h2>
+
+    @for (project of projects; track project.id) {
+      <app-project-card
+        [project]="project"
+        buttonText="Ver Proyecto">
+      </app-project-card>
+    }
   </section>
 
   <section id="contact">
     <h2 class="text-[1.75rem]">Contact</h2>
+
+    <p>I'm excited to hear about potential collaborations! Feel free to reach out through the channels below.</p>
+
+    <div class="flex flex-col gap-2 w-1/2">
+      <app-input label="Nombre" placeholder="Tu nombre"></app-input>
+      <app-textarea [rows]="5" label="Mensaje" placeholder="Escribe tu mensaje aquí"></app-textarea>
+      <app-button class="w-1/3">Enviar Mensaje</app-button>
+    </div>
   </section>
 </section>
