--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,13 +6,13 @@
       </p>
       <div class="flex gap-4 mt-4 md:mt-0">
         <app-link [showExternalIcon]="false" href="https://github.com/sleepy-zuzki">
-          Github
+          <fa-icon [icon]="faGithub" size="2xl"/>
         </app-link>
         <app-link [showExternalIcon]="false" href="https://twitch.tv/sleepy_zuzki">
-          Twitch
+          <fa-icon [icon]="faTwitch" size="2xl"/>
         </app-link>
         <app-link [showExternalIcon]="false" href="https://x.com/sleepy_zuzki">
-          Twitter
+          <fa-icon [icon]="faXTwitter" size="2xl"/>
         </app-link>
       </div>
     </div>
