--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,12 +14,12 @@
 
       <div class="flex items-center gap-3">
         <app-theme-toggle></app-theme-toggle>
-        <app-button ariaLabel="Cambiar idioma" variant="secondary">
-          🌐
-        </app-button>
-        <app-button ariaLabel="Menú móvil" class="md:hidden" variant="secondary">
-          ☰
-        </app-button>
+<!--        <app-button ariaLabel="Cambiar idioma" variant="secondary">-->
+<!--          🌐-->
+<!--        </app-button>-->
+<!--        <app-button ariaLabel="Menú móvil" class="md:hidden" variant="secondary">-->
+<!--          ☰-->
+<!--        </app-button>-->
       </div>
     </div>
   </nav>
