--- a/src/app/features/about/about.feature.html
+++ b/src/app/features/about/about.feature.html
@@ -1,7 +1,7 @@
 <section class="flex gap-5 mb-10" id="about">
-  <img alt="Profile Picture" src="https://placehold.co/460x280"/>
+  <img alt="Profile Picture" height="280" ngSrc="/images/working.webp" width="460"/>
   <div>
-    <h1 class="text-5xl">Sobre Mi</h1>
+    <h1 class="text-5xl mb-2">Sobre Mi</h1>
     <p>Soy Zuzki, Ingeniero de Software con pasión por crear experiencias accesibles y visualmente atractivas.</p>
     <p>Además, cuento con una sólida base en arquitecturas escalables, lo que me permite abordar cada proyecto con precisión y creatividad.</p>
     <p>Siempre estoy explorando nuevas tecnologías para perfeccionar mi trabajo y ofrecer soluciones funcionales y memorables.</p>
@@ -9,7 +9,7 @@
 </section>
 
 <section class="mb-10">
-  <h2 class="text-5xl">Mi Enfoque</h2>
+  <h2 class="text-4xl mb-2">Mi Enfoque</h2>
   <p>Soy Sleepy Zuzki, y me encanta crear experiencias digitales que se sientan como un sueño bien diseñado.</p>
   <p>Mi misión es construir interfaces vivas, estéticas y escalables, que acompañen la creatividad de quienes</p>
   <p>las usan, especialmente en contextos de creación en vivo.</p>
@@ -20,7 +20,7 @@
 </section>
 
 <section class="mb-10">
-  <h2 class="text-5xl mb-2">Hoja de referencia</h2>
+  <h2 class="text-4xl mb-2">Hoja de referencia</h2>
   <img [priority]="true"
        alt="Hoja de personaje de Zuzki"
        height="934"
@@ -30,7 +30,7 @@
 </section>
 
 <section>
-  <h2 class="text-5xl mb-2">Proyectos</h2>
+  <h2 class="text-4xl mb-2">Proyectos</h2>
   @for (project of projects; track project.id) {
     <app-project-card
       [project]="project"
