--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -16,8 +16,8 @@
         <p>¡Espero te guste y podamos realizar algo juntos pronto!</p>
       </div>
       <div class="w-full self-end">
-        <app-button ariaLabel="Explore My Projects">
-          Explorar mis proyectos
+        <app-button ariaLabel="Explora Mis Trabajos" routerLink="/works">
+          <button-text>Explora Mis Trabajos</button-text>
         </app-button>
       </div>
     </div>
@@ -31,32 +31,32 @@
   </section>
 
   <section id="technologies">
-    <h2 class="text-[1.75rem]">Tecnologies</h2>
+    <h2 class="text-[1.75rem]">Tecnologias</h2>
 
     <app-badge [badges]="technologies"></app-badge>
   </section>
 
   <section class="flex flex-col gap-10" id="projects">
-    <h2 class="text-[1.75rem]">Projects</h2>
+    <h2 class="text-[1.75rem]">Trabajos</h2>
 
     @for (project of projects; track project.id) {
       <app-project-card
         [project]="project"
-        buttonText="Ver Proyecto">
+        buttonText="Ver Trabajo">
       </app-project-card>
     }
   </section>
 
   <section id="contact">
-    <h2 class="text-[1.75rem]">Contact</h2>
+    <h2 class="text-[1.75rem]">Contacto</h2>
 
     <p class="mb-3">¡Estoy emocionado por escuchar sobre posibles colaboraciones!</p>
 
     <form action="">
       <div class="flex flex-col gap-2 w-1/2">
-        <app-input label="Nombre" placeholder="Tu nombre"></app-input>
+        <app-input label="Correo" placeholder="jhon@doe.com"></app-input>
         <app-textarea [rows]="5" label="Mensaje" placeholder="Escribe tu mensaje aquí"></app-textarea>
-        <app-button class="w-1/3">Enviar Mensaje</app-button>
+        <app-button class="w-1/3">Enviar</app-button>
       </div>
     </form>
   </section>
