--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,9 +1,9 @@
 <section class="flex flex-col gap-10" id="landing">
-  <section class="flex gap-10" id="introduction">
+  <section class="flex gap-0 lg:gap-10 flex-wrap lg:flex-nowrap" id="introduction">
     <img alt="Profile Picture"
          class="w-[460px] h-[280px]"
          height="280"
-         ngSrc="/images/working.webp"
+         ngSrc="https://assets.zuzki.dev/public/images/sleepy-zuzki-working.jpg"
          width="460"/>
 
     <div class="flex flex-row flex-wrap gap-5">
@@ -41,7 +41,21 @@
 
     @for (project of projects; track project.id) {
       <app-project-card
+        class="w-full"
         [project]="project"
+        [variant]="windowWidth < 426 ? 'square' : 'elongated'"
+        buttonText="Ver Trabajo">
+      </app-project-card>
+      <app-project-card
+        class="w-full"
+        [project]="project"
+        [variant]="windowWidth < 426 ? 'square' : 'elongated'"
+        buttonText="Ver Trabajo">
+      </app-project-card>
+      <app-project-card
+        class="w-full"
+        [project]="project"
+        [variant]="windowWidth < 426 ? 'square' : 'elongated'"
         buttonText="Ver Trabajo">
       </app-project-card>
     }
@@ -53,10 +67,10 @@
     <p class="mb-3">¡Estoy emocionado por escuchar sobre posibles colaboraciones!</p>
 
     <form action="">
-      <div class="flex flex-col gap-2 w-1/2">
+      <div class="flex flex-col gap-2 w-full md:w-1/2">
         <app-input label="Correo" placeholder="jhon@doe.com"></app-input>
         <app-textarea [rows]="5" label="Mensaje" placeholder="Escribe tu mensaje aquí"></app-textarea>
-        <app-button class="w-1/3">Enviar</app-button>
+        <app-button class="w-full md:w-1/3">Enviar</app-button>
       </div>
     </form>
   </section>
