--- a/src/app/features/works/works.feature.html
+++ b/src/app/features/works/works.feature.html
@@ -1,1 +1,54 @@
-<p>works works!</p>
+<section id="works">
+  <header>
+    <div class="flex flex-row gap-5 justify-between items-center">
+      <div class="flex flex-col gap-2">
+        <h1 class="text-5xl font-bold">Ultimos Proyectos</h1>
+        <p class="text-secondary">Drive into our latest work, each project showcasing innovative solutions and design</p>
+      </div>
+
+      <app-button type="button" variant="secondary">
+        Filtros
+      </app-button>
+    </div>
+  </header>
+
+  <section class="flex flex-row flex-wrap mt-8 justify-between">
+    @for (project of projects; track project.id) {
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+
+      <app-project-card
+        class="w-[176px]"
+        [project]="project"
+        variant="square">
+      </app-project-card>
+    }
+  </section>
+</section>
