--- a/src/app/features/works/works.feature.html
+++ b/src/app/features/works/works.feature.html
@@ -6,9 +6,9 @@
         <p class="text-secondary">Drive into our latest work, each project showcasing innovative solutions and design</p>
       </div>
 
-      <app-button type="button" variant="secondary">
-        Filtros
-      </app-button>
+<!--      <app-button type="button" variant="secondary">-->
+<!--        Filtros-->
+<!--      </app-button>-->
     </div>
   </header>
 
