--- a/src/app/shared/components/ui/project-card/project-card.component.html
+++ b/src/app/shared/components/ui/project-card/project-card.component.html
@@ -7,13 +7,13 @@
 
   <img
     [alt]="'Imagen de ' + project.name"
-    [height]="variant === 'elongated' ? 280 : 200"
+    [height]="variant === 'elongated' ? 200 : 200"
     [ngClass]="{
       'elongated': variant === 'elongated',
-      'square': variant === 'square'
+      'square': variant === 'square',
     }"
     [ngSrc]="project.preview"
-    [width]="variant === 'elongated' ? 460 : 300"/>
+    [width]="variant === 'elongated' ? 300 : 300"/>
 
   <div class="flex flex-col justify-between card-body">
     <div>
