--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -66,11 +66,24 @@
 
     <p class="mb-3">¡Estoy emocionado por escuchar sobre posibles colaboraciones!</p>
 
-    <form action="">
+    <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)">
       <div class="flex flex-col gap-2 w-full md:w-1/2">
-        <app-input label="Correo" placeholder="jhon@doe.com"></app-input>
-        <app-textarea [rows]="5" label="Mensaje" placeholder="Escribe tu mensaje aquí"></app-textarea>
-        <app-button class="w-full md:w-1/3">Enviar</app-button>
+
+        <app-input [(ngModel)]="formData.name"
+                   name="name"
+                   placeholder="Sleepy Zuzki"></app-input>
+
+        <app-input [(ngModel)]="formData.email"
+                   name="email"
+                   placeholder="zuzki@sleepy.com"></app-input>
+
+        <app-textarea [(ngModel)]="formData.message"
+                      [rows]="5"
+                      label="Mensaje"
+                      name="message"
+              placeholder="Escribe tu mensaje aquí"></app-textarea>
+
+        <app-button class="w-full md:w-1/3" type="submit">Enviar</app-button>
       </div>
     </form>
   </section>
